# fgo-farm-report-collection

./: Makefile  Pipfile  README.md  pyproject.toml
src/fgo_farm_report_collection/logic/: __init__.py  farm_report_gen_files_merge.py  farm_report_gen_result_merge.py  farm_report_individual_summary_gen.py  farm_report_list_gen.py  farm_report_total_summary_gen.py
src/fgo_farm_report_collection/main/: argument.py  argument_parser_info.py  farm_report_gen_files_merge.py  farm_report_gen_result_merge.py  farm_report_individual_summary_gen.py  farm_report_list_gen.py  farm_report_total_summary_gen.py  main.py
src/fgo_farm_report_collection/main/sub_commands/: farm_report_gen_result_merge.py  farm_report_individual_summary_gen.py  farm_report_list_gen.py  farm_report_total_summary_gen.py
src/fgo_farm_report_collection/util/: __init__.py  const_util.py  pandas_util.py
src/logic/: __init__.py  farm_report_col.py  farm_report_individual_summary_gen.py  farm_report_list_gen.py  farm_report_performance_gen.py  farm_report_summary_gen.py  farm_report_total_summary_gen.py
src/main/: farm_report_col.py  farm_report_individual_summary_gen.py  farm_report_list_gen.py  farm_report_performance_gen.py  farm_report_summary_gen.py  farm_report_total_summary_gen.py
src/util/: __init__.py  const_util.py  pandas_util.py
